<resources>
    <string name="app_name">TriggerTest</string>
    <string name="data_button_name">Load Data</string>
    <string name="exercise_button_name">New Exercise</string>
    <string name="scanning_name">Select device to connect</string>
    <string name="scanning">Scanning!</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_service">Unknown Service</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="label_connection_status">Connection Status</string>
    <string name="label_device_name">Device name:</string>
    <string name="label_device_address">Device Address:</string>
    <string name="unkown_name">Unknown Name</string>
    <string name="label_service_name">Service: </string>
    <string name="select_service">Select Service: </string>
    <string name="no_data">No Data</string>

    <string name="label_select_name">Select Name</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>

    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <string name="action_websearch">Web Search</string>


    <string-array name="nav_titles_array">
        <item>Home</item>
        <item>New Exercise</item>
        <item>Load Data</item>
        <item>Options</item>
    </string-array>


    <string name="alert_notification_service">"Alert Notification Service"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
