<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textSize="24sp"/>

    <Button
        android:id="@+id/DataButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/data_button_name"/>

    <Button
        android:id="@+id/NewExerciseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorAccent"
        android:text="@string/exercise_button_name"
        />


</LinearLayout>