<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_device_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.larslb.triggertest.DeviceManagerActivity">

    <!--<FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/content_frame">
    </FrameLayout>!-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <TextView
            android:layout_width="150dp"
            android:layout_height="30sp"
            android:text="@string/select_service"/>

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/disconnect"
            android:textSize="12sp"
/>
        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/connect"
            android:textSize="12sp"
 />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:id="@+id/service_list" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/label_connection_status"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/connection_state"/>
        </LinearLayout>
    </LinearLayout>



</LinearLayout>
